# makeapex

./: .gitignore  APEXBUILD  APKBUILD  CONTRIBUTING.md  Makefile  PKGBUILD  README.md  makeapex.sh  meson.build
build-aux/: edit-script.sh.in
doc/: APEXBUILD.5.asciidoc  apexbuild.5.md  makeapex.8.asciidoc  makeapex.8.md  makeapex.conf.5.asciidoc
libmakeapex/: autodep.sh  buildenv.sh  executable.sh  integrity.sh  lint_config.sh  lint_package.sh  reproducible.sh  source.sh  util.sh
libmakeapex/autodep/: library_depends.sh  meson.build
libmakeapex/buildenv/: compiler.sh  debugflags.sh  fortran.sh  lto.sh  makeflags.sh  rust.sh
libmakeapex/executable/: ccache.sh  checksum.sh  fakeroot.sh  gpg.sh  gzip.sh  meson.build  pacman.sh  sudo.sh
libmakeapex/integrity/: verify_checksum.sh  verify_signature.sh
libmakeapex/lint_apexbuild/: arch_specific.sh  backup.sh  changelog.sh  checkdepends.sh  depends.sh  meson.build  options.sh  package_function.sh  package_function_variable.sh  pkgname.sh  pkgver.sh  util.sh
libmakeapex/lint_config/: ext.sh  meson.build  nproc.sh  packager.sh  variable.sh
libmakeapex/lint_package/: meson.build  missing_backup.sh
libmakeapex/reproducible/: meson.build
libmakeapex/source/: bzr.sh  file.sh  fossil.sh  git.sh  local.sh
libmakeapex/tidy/: 10-libtool.sh  50-strip.sh  50-zipman.sh  60-linkerconfig.sh
libmakeapex/util/: config.sh  error.sh  meson.build  option.sh  schema.sh  source.sh  util.sh
src/: Makefile  makeapex.conf  makeapex.conf.in  makeapex.sh  makeapex.sh.in
src/libmakeapex/: autodep.sh  autodep.sh.in  buildenv.sh  buildenv.sh.in  executable.sh  executable.sh.in  integrity.sh  integrity.sh.in  lint_apexbuild.sh  lint_apexbuild.sh.in  lint_config.sh.in  lint_package.sh  lint_package.sh.in  meson.build  reproducible.sh  reproducible.sh.in  source.sh  source.sh.in  srcinfo.sh  srcinfo.sh.in  tidy.sh  tidy.sh.in  util.sh  util.sh.in
src/libmakeapex/autodep/: library_depends.sh  library_depends.sh.in  library_provides.sh  library_provides.sh.in
src/libmakeapex/buildenv/: apex_install.sh.in  buildflags.sh  buildflags.sh.in  compiler.sh  compiler.sh.in  debugflags.sh  debugflags.sh.in  fortran.sh  fortran.sh.in  lto.sh  lto.sh.in  makeflags.sh  makeflags.sh.in  meson.build  rust.sh  rust.sh.in
src/libmakeapex/executable/: ccache.sh  ccache.sh.in  checksum.sh  checksum.sh.in  debugedit.sh  debugedit.sh.in  distcc.sh  distcc.sh.in  fakeroot.sh  fakeroot.sh.in  gpg.sh  gpg.sh.in  gzip.sh  gzip.sh.in  pacman.sh  pacman.sh.in  sccache.sh  sccache.sh.in  strip.sh  strip.sh.in  sudo.sh  sudo.sh.in  vcs.sh  vcs.sh.in
src/libmakeapex/integrity/: generate_checksum.sh  generate_checksum.sh.in  generate_signature.sh  generate_signature.sh.in  meson.build  verify_checksum.sh  verify_checksum.sh.in  verify_signature.sh  verify_signature.sh.in
src/libmakeapex/lint_apexbuild/: api_level.sh  api_level.sh.in  arch.sh  arch.sh.in  arch_specific.sh  arch_specific.sh.in  backup.sh  backup.sh.in  changelog.sh  changelog.sh.in  checkdepends.sh  checkdepends.sh.in  conflicts.sh  conflicts.sh.in  depends.sh  depends.sh.in  epoch.sh  epoch.sh.in  fullpkgver.sh  fullpkgver.sh.in  install.sh  install.sh.in  makedepends.sh  makedepends.sh.in  meson.build  optdepends.sh  optdepends.sh.in  options.sh  options.sh.in  package_function.sh  package_function.sh.in  package_function_variable.sh  package_function_variable.sh.in  pkgbase.sh  pkgbase.sh.in  pkgname.sh  pkgname.sh.in  pkgrel.sh  pkgrel.sh.in  pkgver.sh  (+12 more)
src/libmakeapex/lint_config/: buildenv.sh  buildenv.sh.in  ext.sh  ext.sh.in  nproc.sh  nproc.sh.in  packager.sh  packager.sh.in  paths.sh  paths.sh.in  source_date_epoch.sh  source_date_epoch.sh.in  variable.sh  variable.sh.in
src/libmakeapex/lint_package/: build_references.sh  build_references.sh.in  dotfiles.sh  dotfiles.sh.in  file_names.sh  file_names.sh.in  missing_backup.sh  missing_backup.sh.in
src/libmakeapex/reproducible/: source_date_epoch.sh  source_date_epoch.sh.in
src/libmakeapex/source/: bzr.sh  bzr.sh.in  file.sh  file.sh.in  fossil.sh  fossil.sh.in  git.sh  git.sh.in  hg.sh  hg.sh.in  local.sh  local.sh.in  meson.build  svn.sh  svn.sh.in
src/libmakeapex/tidy/: 10-docs.sh  10-docs.sh.in  10-libtool.sh  10-libtool.sh.in  10-staticlibs.sh  10-staticlibs.sh.in  50-purge.sh  50-purge.sh.in  50-strip.sh  50-strip.sh.in  50-zipman.sh  50-zipman.sh.in  60-linkerconfig.sh  60-linkerconfig.sh.in  90-emptydirs.sh  90-emptydirs.sh.in  meson.build
src/libmakeapex/util/: apexbuild.sh  apexbuild.sh.in  compress.sh  compress.sh.in  config.sh  config.sh.in  dirsize.sh  dirsize.sh.in  error.sh  error.sh.in  meson.build  message.sh  message.sh.in  microarch.sh.in  option.sh.in  parseopts.sh  parseopts.sh.in  schema.sh  schema.sh.in  source.sh  source.sh.in  util.sh  util.sh.in
